--- a/README.Rmd
+++ b/README.Rmd
@@ -9,7 +9,7 @@ This repository includes supplementary material to accompany Skripnikov et al. r
 The file structure in this repository is as follows. The tweet data are in the root directory and the sentiment analysis code and vocabularies are in the `Sentiment Analysis` folder.
  
 
-```{r, echo = F}
+```{r, echo = F, comment = NA}
 fs::dir_tree()
 ```
 
