--- a/README.Rmd
+++ b/README.Rmd
@@ -4,6 +4,8 @@ output: github_document
 
 # README
 
+[![DOI](https://zenodo.org/badge/318579178.svg)](https://zenodo.org/badge/latestdoi/318579178)
+
 This repository includes supplementary material to accompany Skripnikov et al. red tide Twitter analysis. Content includes anonymized tweet data (`Secure_Tweets_data.csv`), vocabularies for sentiment analysis, and code to run sentiment analysis.  
 
 The file structure in this repository is as follows. The tweet data are in the root directory and the sentiment analysis code and vocabularies are in the `Sentiment Analysis` folder.
